# google-misc

./: .beautysh-ignore  .clang-format  .clang-format-ignore  .clang-ignore  .gitignore  .shellcheck-ignore  MAINTAINERS  OWNERS  README.md  acpi-power-state-daemon  bare-metal-espi  bare-metal-host-monitor  bios-key  bios-validator  btmanager  dhcp-done  ec-ipmi-blobs  espi-control  flasher  flashupdate  groups  hello.c  hoth-ipmi-blobs  kcsbridge  libcr51sign  meson.build  meson_options.txt  metric-collection-daemon  metrics-ipmi-blobs  ncsid  nemora-postd  postcode-watchdog-kicker  project.config  usb-network
hoth-dbus/: meson.build  subprojects
hoth-dbus/com/google/gbmc/: Hoth.errors.yaml  Hoth.interface.yaml
metrics-ipmi-blobs/: README.md  handler.cpp  handler.hpp  main.cpp  meson.build  metric.cpp  metric.hpp  util.cpp  util.hpp
metrics-ipmi-blobs/test/: meson.build  util_test.cpp
ncsid/: meson.build
ncsid/doc/: ncsid_arch.dot  ncsid_test_arch.dot
ncsid/src/: common_defs.h  meson.build  ncsi_sockio.cpp  ncsi_sockio.h  ncsi_state_machine.cpp  ncsi_state_machine.h  ncsid.cpp  ncsid@.service.in  ncsid_lib.sh  ncsid_udhcpc6.script  net_config.cpp  net_config.h  net_iface.cpp  net_iface.h  net_sockio.cpp  net_sockio.h  nic-hostful@.target  nic-hostless@.target  normalize_ip.c  normalize_mac.c  update-static-neighbors@.service.in  update-static-neighbors@.timer  update_static_neighbors.sh
ncsid/test/: iface_test.cpp  meson.build  ncsi_test.cpp  net_iface_mock.cpp  net_iface_mock.h  nic_mock.cpp  nic_mock.h  normalize_ip_test.sh  normalize_mac_test.sh  sock_test.cpp  test_lib.sh
subprojects/acpi-power-state-daemon/: acpi_power_state.cpp  host-s0-state.target  meson.build
subprojects/bare-metal-espi/: gbmc-disable-espi.service.in  meson.build  npcm7xx_espi_control.cpp
subprojects/bare-metal-host-monitor/: host-gpio-monitor.service.in  host-gpio-monitor@.service.in  host_gpio_monitor.cpp  host_monitor.cpp  meson.build  meson_options.txt
subprojects/bios-key/: meson.build
subprojects/bios-validator/: README.md  cli.cpp  cli.hpp  cr51_image_descriptor.h  libcr51sign.c  libcr51sign_support.c  log_utils.cpp  log_utils.hpp  main.cpp  meson.build  meson_options.txt
subprojects/bios-validator/test/: cli_unittest.cpp  log_utils_unittest.cpp  meson.build
subprojects/btmanager/service_files/: btmanager.service.in  meson.build  record-down-end.service.in  record-down-end.sh
subprojects/btmanager/src/: btDefinitions.cpp  btStateMachine.cpp  btmanager.cpp  dbusHandler.cpp  meson.build  utils.cpp
subprojects/btmanager/src/boottimeblob/: blobHandler.cpp  blobHandler.hpp  hostboottime.proto  meson.build
subprojects/dhcp-done/: dhcp-done.cpp  dhcp-done.service.in  dhcp-done@.service.in  file-io.cpp  file-io.hpp  meson.build  meson.options  send-dhcp-status.cpp  update-dhcp-status.cpp
subprojects/dhcp-done/test/: fileio_test.cpp  meson.build
subprojects/ec-ipmi-blobs/src/: cmd_net.cpp  io_uring.cpp  ipmid.cpp  meson.build
subprojects/ec-ipmi-blobs/src/skm/: cmd.cpp  handler.cpp  main.cpp  meson.build
subprojects/ec-ipmi-blobs/test/: cmd_net.cpp  io_uring.cpp  meson.build  util.cpp
subprojects/ec-ipmi-blobs/test/skm/: cmd.cpp  handler.cpp  meson.build
subprojects/espi-control/: meson.build  npcm7xx_espi_control.cpp
subprojects/flasher/: meson.build
subprojects/flasher/include/: meson.build
subprojects/flasher/include/flasher/: device.hpp  file.hpp  mod.hpp  mutate.hpp  ops.hpp  reader.hpp
subprojects/flasher/internal/: meson.build
subprojects/flasher/internal/flasher/: args.hpp  convert.hpp  logging.hpp  util.hpp
subprojects/flasher/src/: args.cpp  convert.cpp  device.cpp  file.cpp  logging.cpp  main.cpp  meson.build  mod.cpp  mutate.cpp  ops.cpp  reader.cpp
subprojects/flasher/src/device/: fake.cpp  mtd.cpp  mutated.cpp
subprojects/flasher/test/: args.cpp  convert.cpp  device.cpp  file.cpp  meson.build  mod.cpp  ops.cpp  util.cpp
subprojects/flashupdate/: meson.build  meson_options.txt
subprojects/flashupdate/include/: meson.build
subprojects/flashupdate/internal/: meson.build
subprojects/flashupdate/src/: args.cpp  config.cpp  cr51.cpp  flash.cpp  flashupdate.cpp  info.cpp  logging.cpp  meson.build  ops.cpp
subprojects/flashupdate/test/: args.cpp  config.cpp  flash.cpp  meson.build  ops.cpp
subprojects/hoth-ipmi-blobs/: MAINTAINERS  README.md  dbus.cpp  dbus.hpp  dbus_impl.hpp  hoth.cpp  hoth.hpp  meson.build
subprojects/hoth-ipmi-blobs/command/: dbus_command.cpp  dbus_command.hpp  dbus_command_impl.hpp  hoth_command.cpp  hoth_command.hpp  main_command.cpp  meson.build
subprojects/hoth-ipmi-blobs/test/: dbus_mock.hpp  meson.build
subprojects/libcr51sign/: OWNERS  README.md  cr51_image_descriptor.h  cr51sign_validator.cpp  cr51sign_validator.h  libcr51sign.c  libcr51sign.h  meson.build  meson_options.txt
subprojects/libcr51sign/cr51sign_validator/: mock.hpp
subprojects/libcr51sign/include/: meson.build
subprojects/libcr51sign/src/: cr51sign_validator.cpp  libcr51sign.c  libcr51sign_mauv.c  libcr51sign_support.c  meson.build
subprojects/metric-collection-daemon/: daemon.cpp  daemon.hpp  meson.build  metricCollector.cpp  metricCollector.hpp  oe-logs  oe-workdir  phosphor-metric-collector.service.in  port.cpp  port.hpp  utils.cpp  utils.hpp
subprojects/metric-collection-daemon/subprojects/: fmt.wrap  googletest.wrap
subprojects/metrics-ipmi-blobs/: MAINTAINERS  README.md  handler.cpp  main.cpp  meson.build  metric.cpp  metric.hpp  metricblob.proto  run-ci  util.cpp  util.hpp
subprojects/metrics-ipmi-blobs/test/: meson.build  util_test.cpp
subprojects/nemora-postd/: MAINTAINERS  README.md  event_message.proto  meson.build  nemorad.cpp  subprojects
subprojects/nemora-postd/src/: default_addresses.h  host_manager.cpp  host_manager.hpp  nemora.cpp  nemora.hpp  nemora_types.hpp  serializer.cpp  serializer.hpp  socket_manager.cpp  socket_manager.hpp
subprojects/postcode-watchdog-kicker/: config.cpp  config.hpp  main.cpp  meson.build  postwd.service.in
subprojects/usb-network/: google-usb-dynamic.cpp  meson.build
(+147 files in other folders)
